--- a/src/main/resources/static/layout-editor.html
+++ b/src/main/resources/static/layout-editor.html
@@ -420,7 +420,7 @@
             },
             methods: {
                 goBack() {
-                    window.location.href = 'index.html';
+                    window.location.href = 'ai-generator.html';
                 },
                 saveLayout() {
                     console.log('保存布局', this.layoutItems);
